--- a/src/page-height-chart/PageHeightChart.css
+++ b/src/page-height-chart/PageHeightChart.css
@@ -148,11 +148,21 @@
   font-size: 14px;
   font-weight: bold;
   color: var(--hc-primary-dark);
+  text-shadow:
+    -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
 }
 
 .height-chart-sprite-height {
   font-size: 12px;
   color: var(--hc-primary-medium);
+  text-shadow:
+    -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
 }
 
 /* Close button - positioned relative to sprite */
