--- a/src/page-height-chart/PageHeightChart.css
+++ b/src/page-height-chart/PageHeightChart.css
@@ -203,7 +203,7 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-top: var(--hc-border-width) solid rgba(134, 78, 219, 0.5);
-  padding: 10px 20px;
+  padding: 10px 20px 15vh;
   position: relative;
   z-index: 150;
   overflow-x: hidden;
@@ -344,7 +344,7 @@
   }
 
   .height-chart-selector {
-    padding: 8px 10px;
+    padding: 8px 10px 15vh;
   }
 
   .height-chart-selector-inner {
