--- a/src/page-height-chart/PageHeightChart.css
+++ b/src/page-height-chart/PageHeightChart.css
@@ -22,7 +22,7 @@
 .height-chart-page {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--hc-navbar-height));
+  height: calc(100vh - var(--hc-navbar-height) + 15vh);
   width: 100%;
   overflow: hidden;
   margin-bottom: 0;
